# claude-mental-models

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
articles/: 2026-05-27-the-tool-as-teacher.html  2026-05-27-the-tool-as-teacher.md
data/fixtures/: changelog_sample.md  news_index.html
data/processed/: _b4_themes.parquet  _b5_themes.parquet  anchor_themes.parquet  audit_sample.csv  blogs.parquet  changelog.parquet  codes.parquet  coding_audit.json  coherence.parquet  derivations.parquet  independent_derivation.json  joins.parquet  mini_themes.parquet  persona_relevance.parquet  residual_analysis.json  run_metrics.json  themes.parquet
docs/: findings.md  index.html  methodology.md  session-archive.md
docs/superpowers/plans/: 2026-05-20-claude-mental-models.md  2026-05-21-analysis-improvement.md  2026-05-21-methodological-rebuild.md
docs/superpowers/specs/: 2026-05-20-claude-mental-models-design.md  2026-05-21-analysis-improvement-design.md
notebooks/: analysis.py  analysis_public.py
src/cmm/: audit_sample.py  cache.py  codex_llm.py  coherence.py  collect_blogs.py  collect_changelog.py  embed_cluster.py  llm.py  persona_lens.py  rag.py  render_blogs.py  tag_and_join.py  thematic_coding.py  theme_derivations.py  triangulate.py  urls.py
tests/: test_audit_sample.py  test_cache.py  test_codex_llm.py  test_coherence.py  test_collect_blogs.py  test_collect_changelog.py  test_render_blogs.py  test_theme_derivations.py  test_triangulate.py  test_urls.py
